tdf#64292 tdf#94639 Meaningless Functions in Template Properties Dialog

Removed useless Template Properties Dialog.

Change-Id: I453abb67de9eb1515f98ff78cc7bebcc69482a1e
Reviewed-on: https://gerrit.libreoffice.org/23339
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>